trying to solve the letters not showing issue

--- a/styles.css
+++ b/styles.css
@@ -35,12 +35,10 @@ h1 {
     border-radius: 10px;
     padding: 20px;
     box-sizing: border-box;
-  }
+}
   
-  #board div {
-    position: absolute;
-    top: 0;
-    left: 0;
+#board .tile {
+    position: relative;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -50,7 +48,8 @@ h1 {
     color: black;
     font-size: 36px;
     border-radius: 5px;
-  }
+}
+  
   
   
 @keyframes fade-in {
